remove 100vw and hide overflow to fix overflow-x problem

--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .main-container {
@@ -22,10 +24,14 @@ body {
     flex-direction: column;
 }
 
+.centered {
+    width: 100%;
+}
+
 .centered > .name {
     font-family: 'Bebas Neue', 'Bangers';
     font-size: 1.25em;
-    width: 100vw;
+    width: 100%;
     text-align: center;
     overflow: hidden;
 }
